[tool.poetry]
name = "seft"
version = "0.1.0"
description = "Set functions for Time Series"
authors = ["Anonymous"]
license = "BSD-3-clause"

[tool.poetry.dependencies]
python = "^3.7"
medical-ts-datasets = {path = "repos/medical_ts_datasets"}
tensorflow = { version = "=1.15.2", markers = "sys_platform != 'linux'" }
tensorflow-gpu = { version = "=1.15.2", markers = "sys_platform == 'linux'" }
keras-transformer = {path = "repos/keras-transformer"}
scikit-learn = "^0.22.1"
tqdm = "^4.42.0"

[tool.poetry.dev-dependencies]
ipdb = "^0.12.3"
tabulate = "^0.8.6"
matplotlib = "^3.1.2"
seaborn = "^0.10.0"

[build-system]
requires = ["poetry>=1.0"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
seft_fit_model = "seft.cli.fit_model:main"
seft_prepare_datasets = "seft.cli.prepare_datasets:main"
seft_evaluate_model = "seft.cli.evaluate_model:main"
